# create_novelReader_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  HUONG_DAN_SU_DUNG.md  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  synth.py
.github/workflows/: audiobook.yml  bot.yml  continuous-watchdog.yml  convert.yml  lint.yml  telegram-bot.yml  tts.yml
bot/: .env.example  README.md  bot_poll.py  telegram_bot.py
bot/state/: state.json
config/: default.yaml  voices.example.yaml
docs/: ARCHITECTURE.md  CONFIG.md  INSTALL.md  PIPELINE.md  ROADMAP.md  TELEGRAM.md
jobs/: README.md
jobs/20260722-102417-b736/: progress.json
jobs/20260722-102511-79ad/: progress.json
jobs/20260722-102603-9be8/: job.json  progress.json
jobs/20260722-103246-6898/: progress.json
jobs/20260723-024414-e9af/: job.json  progress.json
jobs/20260723-044659-b533/: job.json  progress.json
jobs/20260723-045921-7a72/: job.json  progress.json
jobs/20260723-051047-9808/: job.json  progress.json
jobs/20260723-104552-7f6b/: 12553-tien-lo-tranh-phong-thuviensach.vn.epub  job.json  progress.json
models/: README.md
pipeline/: batch_tts.py  continuous_job.py  ia_upload.py  parse_ebook.py  requirements-pipeline.txt
scripts/: enqueue.py
src/audiobook_forge/: __init__.py  __main__.py  cli.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_cache.py  test_chapters.py  test_checkpoint.py  test_normalize_text.py  test_normalize_vietnamese.py  test_queue.py  test_segmenter.py  test_voices.py
(+68 files in other folders)
