[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobook-forge"
version = "1.0.0"
description = "Production-ready Ebook -> Audiobook automation with Telegram Bot, GitHub Actions and Piper TTS."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Audiobook Forge Contributors" }]
keywords = ["tts", "piper", "audiobook", "ebook", "telegram", "github-actions"]

dependencies = [
  "piper-tts==1.2.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "beautifulsoup4>=4.12",
  "lxml>=5.1",
  "EbookLib>=0.18",
  "mutagen>=1.47",
  "Pillow>=10.2",
  "python-telegram-bot>=21.0",
  "httpx>=0.27",
  "tenacity>=8.2",
  "py7zr>=0.21",
  "rarfile>=4.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.9",
  "ruff>=0.4",
  "types-PyYAML",
]

[project.scripts]
audiobook-forge = "audiobook_forge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
audiobook_forge = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
files = ["src"]
